<resources>
    <string name="app_name">mobile-dev</string>
    <string name="first_button">1</string>
    <string name="second_button">2</string>
    <string name="third_button">3</string>
    <string name="minus_points">-</string>
    <string name="plus_points">+</string>
    <string name="regular_label">Regular font label</string>
    <string name="hide_list_button">Hide list</string>
    <string name="show_toast_button">Toast</string>
    <string name="switch_text">Change label color</string>
    <string name="number_stub">1</string>
    <string name="number_zero">0</string>
    <string name="icon_stub">o</string>
    <string name="nat">Nat</string>
    <string name="fib">Fib</string>
    <string name="col">Col</string>
    <string name="description_stub">Abcdofhseo efhosh eoheoheohseoh osfe hohsefohofse he ohsfoheoh sfoehefoh</string>
    <string name="cats_content_description">cat picture</string>
    <string name="textview_stub">TextView</string>
    <string-array name="cat_names">
        <item>Cleo</item>
        <item>Bella</item>
        <item>Lucy</item>
        <item>Kitty</item>
    </string-array>
    <string name="run">Run</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>

    <string name="signIn">Login</string>
    <string name="signup">SignUp</string>
    <string name="id">id:</string>
    <string name="money">Money:</string>
    <string name="luck">Lucky</string>
    <string name="withdraw">-</string>
    <string name="deposit">+</string>

    <string name="err_not_valid">Please enter valid login</string>
    <string name="err_not_found">User not found</string>
    <string name="err_not_loaded">User not loaded</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_user_success">User deleted successfully</string>
    <string name="error">Error</string>
</resources>