<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_stub"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/textView_descr"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="207dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/cats_content_description" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_stub"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView_descr"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_stub"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_stub"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_descr"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/description_stub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView_nat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/number_stub"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_fib"
        app:layout_constraintStart_toStartOf="@+id/button_nat" />

    <Button
        android:id="@+id/button_nat"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/nat"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@+id/button_fib"
        app:layout_constraintEnd_toStartOf="@+id/button_fib"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_fib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/number_stub"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_fib"
        app:layout_constraintStart_toStartOf="@+id/button_fib"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.9" />


    <Button
        android:id="@+id/button_fib"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:text="@string/fib"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_col"
        app:layout_constraintStart_toEndOf="@+id/button_nat" />

    <TextView
        android:id="@+id/textView_col"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/number_stub"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_fib"
        app:layout_constraintStart_toStartOf="@+id/button_col" />

    <Button
        android:id="@+id/button_col"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/col"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@+id/button_fib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_fib" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_stub"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_nat"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.100000024" />

</androidx.constraintlayout.widget.ConstraintLayout>